--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -17,5 +17,7 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
+    - name: Run elastic-search
+      run: docker run -d -p 9200:9200 -e discovery.type=single-node elasticsearch:7.1.0
     - name: Run tests
       run: sbt test
