Cross build support for Scala 2.12 (remove Deequ)

--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -20,6 +20,6 @@ jobs:
       - name: Run elastic-search
         run: docker run -d -p 9200:9200 -e discovery.type=single-node elasticsearch:7.1.0
       - name: Run tests
-        run: sbt test
+        run: sbt +test
       - name: Check documentation builds
         run: sbt docs/mdoc
