Set ES_PORT for running test on Github actions

--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -20,6 +20,8 @@ jobs:
       - name: Run elastic-search
         run: docker run -d -p 9200:9200 -e discovery.type=single-node elasticsearch:7.1.0
       - name: Run tests
+        env:
+          ES_PORT: 9200
         run: sbt +test
       - name: Check documentation builds
         run: sbt docs/mdoc
